feat: 完善模块菜单引导与动态业务使用闭环